--- a/Airline-Management/angular.json
+++ b/Airline-Management/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "Airline-Managment": {
+    "Airline-Management": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:application": {
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/Airline-Managment",
+            "outputPath": "dist/Airline-Management",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -65,18 +65,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "Airline-Managment:build"
+            "browserTarget": "Airline-Management:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "Airline-Managment:build:production"
+              "browserTarget": "Airline-Management:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "Airline-Managment:build"
+            "browserTarget": "Airline-Management:build"
           }
         },
         "test": {
@@ -113,16 +113,16 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "Airline-Managment:serve"
+            "devServerTarget": "Airline-Management:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "Airline-Managment:serve:production"
+              "devServerTarget": "Airline-Management:serve:production"
             }
           }
         }
       }
     }
   },
-  "defaultProject": "Airline-Managment"
+  "defaultProject": "Airline-Management"
 }
