--- a/Airline-Management/package.json
+++ b/Airline-Management/package.json
@@ -11,15 +11,16 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~11.1.1",
+    "@angular/animations": "^11.1.1",
+    "@angular/cdk": "^11.1.1",
     "@angular/common": "~11.1.1",
     "@angular/compiler": "~11.1.1",
     "@angular/core": "~11.1.1",
     "@angular/forms": "~11.1.1",
+    "@angular/material": "^11.1.1",
     "@angular/platform-browser": "~11.1.1",
     "@angular/platform-browser-dynamic": "~11.1.1",
     "@angular/router": "~11.1.1",
-    "angular-in-memory-web-api": "^0.11.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
@@ -30,6 +31,7 @@
     "@angular/compiler-cli": "~11.1.1",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
+    "angular-in-memory-web-api": "^0.11.0",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
